# pydantic-generator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
pydantic_generator/: cli.py  main.py
pydantic_generator/core/: generator.py  parser.py
pydantic_generator/core/parser/: __init__.py  base.py  json_parser.py
tests/: test_pydantic_generator.py
tests/core/: test_generator.py  test_parser.py
tests/data/: data_01.json  data_01.py  data_02.py  data_03.py  data_04.py  data_05.py
