[tool.poetry]
name = "pydantic-generator"
version = "0.1.0"
description = "pydantic-generator generates the pydantic model classes."
authors = ["rhoboro <rhoboro@gmail.com>"]

[tool.poetry.scripts]
pydanticgen = "pydantic_generator.main:main"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.1"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
