[tool.poetry]
name = "pydantic-generator"
version = "1.0.0"
readme = "README.md"
description = "pydantic-generator generates the pydantic model classes."
authors = ["rhoboro <rhoboro@gmail.com>"]
repository = "https://github.com/rhoboro/pydantic-generator"
license = "MIT"

[tool.poetry.scripts]
pydanticgen = "pydantic_generator.main:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.1"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
